<!--
  ~ /**
  ~  * Created by Lionel Joffray on 23/09/19 21:08
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 23/09/19 17:39
  ~  */
  -->

<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="real_estate_manager">Real Estate Manager</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="surface">Surface</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="name">Name</string>
    <string name="available">Available</string>
    <string name="date_added">Date added</string>
    <string name="last_modification">Last modification</string>
    <string name="location">Location</string>
    <string name="error_unknown_error">an unknown error has occurred</string>
    <string name="static_maps">static maps</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="description">Description</string>
    <string name="describe_the_property_here">Full description here.</string>
    <string name="sqft">sqft</string>
    <string name="rooms">rooms</string>
    <string name="bathrooms">bathrooms</string>
    <string name="bedrooms">bedrooms</string>
    <string name="agent_details">Agent details</string>
    <string name="agent_name_example">Agent Name example</string>
    <string name="for_sale_sold">For Sale / Sold</string>
    <string name="date">Date</string>
    <string name="_0">0</string>
    <string name="estate_type">Estate Type *</string>
    <string name="main_picture">Main Picture *</string>
    <string name="additional">Additional</string>
    <string name="neighborhood">Neighborhood *</string>
    <string name="set_price">Set price *</string>
    <string name="search_address">Search Address *</string>
    <string name="required_fields">* = required fields</string>
    <string name="for_sale">For Sale</string>
    <string name="sold">Sold</string>
    <string name="hello">HELLO</string>
    <string name="address">Address</string>
    <string name="x_more">x more</string>
    <string name="dollars_devise">$</string>
    <string name="euros_devise">€</string>
    <string name="surface_search">Surface :</string>
    <string name="date_added_search">Date added :</string>
    <string name="date_sold_search">Date sold :</string>
    <string name="photo_s">Photo(s) :</string>
    <string name="price">Price :</string>
    <string name="neighborhood_search">Neighborhood :</string>
    <string name="any">Any</string>
    <string name="and">And</string>
    <string name="estate_list">Estate List</string>
    <string name="estate_saved">Estate Saved</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="real_estate_loans">Real estate loans :</string>
    <string name="loan_amount">Loan amount :</string>
    <string name="interest_rate">Interest Rate :</string>
    <string name="loan_term">Loan Term :</string>
    <string name="years">Years</string>
    <string name="loan_duration">Loan duration :</string>
    <string name="monthly_payment">Monthly Payment :</string>
    <string name="total_interest_paid">Total Interest Paid :</string>
    <string name="rate">Rate :</string>
    <string name="months">Months</string>
    <string name="simulate">Simulate</string>
    <string name="choose_a_currency">choose a Currency :</string>
    <string name="choose_a_theme_color">choose a Theme Color :</string>
    <string name="result">Result :</string>
    <string name="_0_50000">0 – 50000</string>
    <string name="any_pick_one">Any / Pick one</string>
    <string name="_0_8">0–8</string>
    <string name="_0_999m">0 – 999M</string>
    <string name="search">Search</string>
    <string name="nearby">Nearby :</string>
    <string name="school">School</string>
    <string name="police_station">Police Station</string>
    <string name="hospital">Hospital</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="around_500_meters">Around (500 meters)</string>
    <string name="error_try_again">Error, please try again.</string>
    <string name="main_click">Click Main</string>
    <string name="settings_click">Click Setting</string>
    <string name="req_select_picture">You have to select a Main Picture</string>
    <string name="req_select_type">You have to select a Type</string>
    <string name="req_select_hood">You have to select a Neighborhood</string>
    <string name="req_select_price">You have to set a Price</string>
    <string name="req_select_address">You have to enter an Address</string>
    <string name="list_click">Click List</string>
    <string name="map_click">Click Map</string>
    <string name="adding_estate">Adding an Estate</string>
    <string name="searching_estate">Search an Estate</string>
    <string name="set_amount">You have to set an amount</string>
    <string name="set_rate">You have to set a rate</string>
    <string name="set_years">You have to set the years</string>
    <string name="enter">Enter</string>
</resources>
