<?xml version="1.0" encoding="utf-8"?><!--
  ~ /**
  ~  * Created by Lionel Joffray on 18/09/19 23:09
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 18/09/19 23:09
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="">
        <menu>

            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/drawer_first"
                    android:title="@string/home"
                    android:icon="@drawable/ic_home_black_24dp" />
                <item
                    android:id="@+id/drawer_second"
                    android:title="@string/settings"
                    android:icon="@drawable/ic_settings_24dp" />
                <item
                    android:id="@+id/drawer_third"
                    android:title="@string/logout"
                    android:icon="@drawable/ic_logout_24dp" />
            </group>

        </menu>
    </item>

</menu>