<?xml version="1.0" encoding="utf-8"?><!--
  ~ /**
  ~  * Created by Lionel Joffray on 06/09/19 20:07
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 06/09/19 19:29
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.map.MapFragment"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/gradient">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/normal_margin"
                        android:text="@string/location"
                        android:textColor="@color/primaryTextColor"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/address_search_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/normal_margin">


                <TextView
                    android:id="@+id/address_edit_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_address"
                    android:padding="@dimen/normal_margin"
                    android:textColor="@color/secondaryTextColor" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/address_edit_img"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_edit_24dp"
                    android:layout_toEndOf="@+id/address_edit_txt"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:visibility="invisible"
                    android:tint="@color/secondaryDarkColor"
                    android:gravity="fill_vertical" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/address_location_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location_24dp"
                    android:layout_below="@+id/address_edit_txt"
                    android:layout_marginTop="@dimen/normal_margin" />

                <TextView
                    android:id="@+id/address_txt_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/normal_margin"
                    android:hint="@string/address"
                    android:textColor="@color/secondaryTextColor"
                    android:layout_margin="@dimen/small_margin"
                    android:layout_below="@+id/address_edit_txt"
                    android:layout_toEndOf="@+id/address_location_img" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <fragment
                    android:id="@+id/address_map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    tools:context="com.example.mapwithmarker.MapsMarkerActivity"
                    map:cameraZoom="11"
                    map:mapType="terrain"
                    map:liteMode="true"
                    android:layout_margin="@dimen/normal_margin" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
